# bonnie

./: .env  .gitignore  .gitmodules  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  bonnie.toml  spec.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-releases.yml  cd.yml  ci.yml
install_scripts/: musl.sh
src/: .bonnie.cache.json  .env  .env.invalid  bones.rs  bonnie.experimental.toml  bonnie.toml  cache.rs  command.rs  commands_registry.rs  default_shells.rs  get_cfg.rs  help.rs  help_page.rs  init.rs  install.rs  lib.rs  logic.rs  main.rs  raw_schema.rs  read_cfg.rs  schema.rs  template.rs  version.rs
tests/: caching.rs  get_cfg.rs  get_cfg_path.rs  get_command_from_cfg_and_args.rs  known_cases.rs  run_cmd.rs
