[package]
name = "bonnie"
version = "0.2.1"
authors = ["arctic_hen7 <arctic_hen7@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.8"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
dotenv = "0.15.0"
regex = "1.5.4"

[lib]
name = "lib"

[[bin]]
name = "bonnie"
path = "src/bin/main.rs"
