[package]
name = "bonnie"
version = "0.3.1"
authors = ["arctic_hen7 <arctic_hen7@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
serde = { version = "1", features = ["derive"]  }
serde_json = "1"
dotenv = "0.15"
regex = "1.5"
home = "0.5"

[lib]
name = "lib"

[[bin]]
name = "bonnie"
path = "src/bin/main.rs"
